# vgs-stars

./: .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  run.py
app/: __init__.py  config.py  main.py  security.py
app/models/: __init__.py  notifications.py  stars.py  user.py
app/routes/: auths.py  health.py
app/services/: api_keys.py  cloud_tasks.py  database.py  email_service.py  notification_service.py  stars_client.py
notebooks/: currency.ipynb
scripts/: users.py
tests/: conftest.py  test_functional.py
