[project]
name = "vgs-stars"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Jennings",email = "mjennings061@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo (>=4.15.5,<5.0.0)",
    "fastapi (>=0.115.0,<0.116.0)",
    "uvicorn[standard] (>=0.32.0,<0.33.0)",
    "pydantic (>=2.10.0,<3.0.0)",
    "pydantic-settings (>=2.7.0,<3.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "sendgrid (>=6.11.0,<7.0.0)",
    "python-dotenv (>=1.2.0,<2.0.0)",
    "click (>=8.1.0,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.5.0"
black = {extras = ["jupyter"], version = "^25.11.0"}
isort = "^7.0.0"
pylint = "^4.0.4"
nbstripout = "0.8.2"
pre-commit = "^4.5.0"
pytest = "^8.3.0"
httpx = "^0.28.0"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint.main]
py-version = "3.13"

[tool.pylint.format]
max-line-length = 88
